@startuml

' ===== Superklasse =====
class User {
    -id : int
    -username : String
    -password : String
    -email : String
}

' ===== Subklasser (arver uden dublering) =====
class Admin
class Customer

User <|-- Admin
User <|-- Customer

' ===== Cupcake =====
class Cupcake {
    -topping : List<Topping>
    -bottom : List<Bottom>
    -int price
}

' ===== (valgfri hjælpeklasser til tydelighed) =====
class Topping
class Bottom

' ===== UserController =====
class UserController {
    {static} +addRoutes() : void
    {static} +createUser() : void
    {static} +login() : void
    {static} +logout() : void
}

' ===== UserMapper =====
class UserMapper {
    {static} +login() : User
    {static} +createUser() : User
    {static} +adminAccess() : User
}

' ===== Order =====
class Order {
    -id : int
    -orderStatus : String
    -orderDate : LocalTime
    -userId : int
}

' ===== OrderController =====
class OrderController {
    {static} +addRoutes() : void
    {static} +createOrder() : void
    {static} +userOrder() : void
}

' ===== OrderMapper =====
class OrderMapper {
    {static} +createOrder() : Order
    {static} +userOrder() : Order
    {static} +orderDate() : Order
}

' ===== ShoppingCart =====
class ShoppingCart {
    -orderId : int
    -orderDetails : String
    -orderLine : String
}

' ===== Relationer =====
UserController --> UserMapper
OrderController --> OrderMapper
Order --> User
ShoppingCart --> Order

' ===== Ny relation: Cupcake i Order =====
Order "1" --> "*" Cupcake

@enduml